# tmgtoolkit

./: .gitignore  .vifm-context.vifm  conftest.py  requirements.txt  setup.cfg
src/tmgtoolkit/: constants.py  plotting.py  spm.py  time_series.py  tmgio.py
tests/: test_split_data_for_spm.py
