[metadata]
name = tmgtoolkit
version = 0.1.0
author = Elijan Mastnak
author_email = admin@ejmastnak.com
description = Time series analysis of tensiomyography (TMG) data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejmastnak/tmg
project_urls =
    Bug Tracker = https://github.com/ejmastnak/tmg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src 
